--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,3 +33,4 @@ jobs:
           plugin_tweets: yes
           plugin_tweets_limit: 5
           plugin_tweets_user: altkennyh2l
+          plugin_tweets_token: ${{ secrets.TWITTER_TOKEN }}
